sign in fixes
main issues have to do with our env and compose files not being populated correctly and port conflicts.